[update] added another draggable handle to the fragment editor to prevent the editor from getting stuck;

--- a/src/main/webapp/styles/custom/home.css
+++ b/src/main/webapp/styles/custom/home.css
@@ -116,6 +116,11 @@
     overflow: hidden;
 }
 
+#editor-button-bar {
+	height:46px;
+	background-color:gainsboro;
+}
+
 #fragment-overlay-title {
 	font-weight: bold;
 	font-size:large;
